src_old/objects/NamespaceSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ClassPrefix__c</fullName>
        <description>Namespace followed by . to prefix apex classes and visualforce pages</description>
        <inlineHelpText>Namespace followed by . to prefix apex classes and visualforce pages</inlineHelpText>
        <label>Class Prefix</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectPrefix__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>The namespace followed by __ to prefix Salesforce Objects</description>
        <inlineHelpText>The namespace followed by __ to prefix Salesforce Objects</inlineHelpText>
        <label>Object Prefix</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RawPrefix__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>The namespace prefix by itself</description>
        <inlineHelpText>The namespace prefix by itself</inlineHelpText>
        <label>Raw Prefix</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Namespace Settings</label>
</CustomObject>